<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item
      android:id="@+id/today"
      android:icon="@drawable/ic_today"
      android:title="@string/today" />

  <item
      android:id="@+id/calendar"
      android:icon="@drawable/ic_calendar"
      android:title="@string/calendar" />

  <item
      android:id="@+id/tips"
      android:icon="@drawable/ic_tips"
      android:title="@string/tips" />

  <item
      android:id="@+id/resources"
      android:icon="@drawable/ic_resources"
      android:title="@string/resources_menu_beta" />

</menu>
