...
    <string name="read_privacy_policy">Privacy Policy</string>
    <string name="help_improve_app">Help us improve the app by sending feedback. It would take just a few minutes and will mean a lot to us. Thank you.</string>
    <string name="help_us_grow">Loved the App? Help us reach more people by sharing the App with family and friends. Thank you.</string>
    <string name="share_app">Share App</string>
    <string name="help_translate_app">Help us reach more people by translating the app to %s. Thank you.</string>
    <string name="unavialable">Default</string>
    <string name="dismiss">Dismiss</string>
    <string name="help_translate_app_button">Help Translate App</string>
    <string name="light_theme">Light</string>
    <string name="today_widget_label">Today To-Dos (Light, Dark, Transparent)</string>
    <string name="prayer_times_widget_label">Prayer Times (Light, Dark, Transparent)</string>
    <string name="hijri_date_widget_label">Hijri Date Widget</string>
    <string name="to_dos">To-Dos</string>
...
    <string name="monday_abbreviated">M</string>
    <string name="tuesday_abbreviated">T</string>
    <string name="wednesday_abbreviated">W</string>
    <string name="thursday_abbreviated">T</string>
    <string name="friday_abbreviated">F</string>
    <string name="saturday_abbreviated">S</string>
    <string name="today">Today</string>
    <string name="calendar">Calendar</string>
    <string name="time_label">Time</string>
    <string name="date">Date</string>
    <string name="date_not_set">Date not Set</string>
    <string name="scroll_to_previous_month">Scroll to previous month icon</string>
    <string name="scroll_to_next_month_icon">Scroll to next month icon</string>
...
    <string name="sunnah_nudges_channel_description">Sunnah suggestions</string>
    <string name="suggested">Suggested</string>
    <string name="reminder">Reminder</string>
    <string name="too_many_requests">Too many requests. Please try again after %s. If you think this is a mistake please contact us at %s</string>
    <string name="an_error_occurred">An error occurred. Please try again. If this persists please contact us at %s</string>
    <string name="update_app">Please update app to the latest version</string>
    <string name="location_updated_successfully">Location updated successfully</string>
    <string name="fix_notifications">To-Do notifications are disabled. Enable notification permission in system settings to receive notifications</string>
    <string name="don_t_show_this">Don\'t Show This</string>
    <string name="fix_alarms_and_reminders">Sunnah Assistant is blocked from scheduling reminders by the system</string>
    <string name="tap_to_fix_this">Tap to fix this</string>
    <string name="enable_alarms_and_reminders_title">Enable Alarms and Reminders</string>
    <string name="enable_alarms_and_reminders_message">To receive reminders at the correct time, please allow Sunnah Assistant to schedule alarms and reminders in the next screen.</string>
    <string name="refreshing_notifications">Refreshing notifications…</string>
    <string name="resources">Resources</string>
    <string name="resources_menu_beta">Resources <span><sup><small>BETA</small></sup></span></string>
    <string name="hadith">Hadith</string>
    <string name="daily_hadith">Daily Hadith</string>
    <string name="quran">Quran</string>
    <string name="from_the_sunnah_revival_blog">From The Sunnah Revival Blog</string>
    <string name="showing_cached_data_because_device_is_offline">Showing cached data because device is offline</string>
    <string name="no_hadith_found">No Hadith Found</string>
    <string name="try_again">Try again</string>
    <string name="an_error_occurred_while_fetching_hadith">An error occurred while fetching hadith</string>
...
    <string name="previous">Previous</string>
    <string name="bookmark">Bookmark</string>
    <string name="copy">Copy</string>
    <string name="copy_label">Ayah</string>
    <string name="copy_message">Copied to clipboard</string>
    <string name="share_via">Share via</string>
    <string name="select_translation">Tap here to Select Translation</string>
    <string name="translation">Translation: %s</string>
    <string name="translations_selected">%d translations selected</string>
    <string name="ayah_number">Ayah %d</string>
    <string name="dropdown_arrow">Dropdown Arrow</string>
    <string name="surah_number">Surah Number %d</string>
    <string name="juz">Juz</string>
    <string name="translations">Translations</string>
    <string name="bookmark_page">Bookmark page</string>
    <string name="makki_verse_count">Makki - %s Verses</string>
    <string name="madani_verse_count">Madani - %s Verses</string>
    <string name="more">More</string>
    <string name="tap_to_view_all_surahs">Tap to view all Surahs</string>
    <string name="download_file_info_part1">For the best experience,</string>
...
    <string name="search_bookmarks">Search bookmarks</string>
    <string name="search_adhkaar_bookmarks">Search adhkaar bookmarks</string>
    <string name="read_quran">Read Quran</string>
    <string name="read_adhkaar">Read Adhkaar</string>
    <string name="tap_the_page_to_enter_leave_full_screen_mode">Tap the page to enter/leave full screen mode</string>
    <string name="hold_long_tap_ayah_to_view_its_translation">Hold (Long Tap) ayah to view its translation</string>
    <string name="got_it">Got it</string>
    <string name="swipe_to_navigate_between_adhkaar_chapters">Swipe to navigate between Adhkaar Chapters</string>
    <string name="suggested_actions">Suggested Actions</string>
    <string name="weekly_friday_reminder">Weekly Friday Reminder</string>
    <string name="suratul_mulk_daily_reminder">Suratul Mulk Daily Reminder</string>
    <string name="suratul_sajdah_daily_reminder">Suratul Sajdah Daily Reminder</string>
    <string name="evening_adhkaar_daily_reminder">Evening Adhkaar Daily Reminder</string>
...
    <string name="read_adhkaar_before_sleeping">Read Adhkaar Before Sleeping</string>
    <string name="sleeping_adhkaar_daily_reminder">Before Sleeping Adhkaar Daily Reminder</string>
    <string name="read_more_on_suratul_mulk">Tap here to read more on the importance of reading Suratul Mulk and Al Sajdah every night</string>
    <string name="prayer_time_mode">Time Mode</string>
    <string name="custom_time">Custom Time</string>
    <string name="prayer_time_changes_disclaimer">Changes here will apply to upcoming (future) prayer times only, not past ones.</string>
    <string name="nudge_enable_prayer_alerts">Tap here to enable prayer time alerts</string>
    <string name="nudge_add_template_todo">Tap here to add "%1$s" to your to-do list</string>
    <string name="tap_here_to_read_more_on_morning_adhkaar">Tap here to read more on the importance of reading Morning Adhkaar</string>
    <string name="tap_here_to_read_more_on_evening_adhkaar">Tap here to read more on the importance of reading Evening Adhkaar</string>
    <string name="tap_here_to_read_more_on_quran">Tap here to read more on the importance of reading Quran</string>
    <string-array name="categories">
        <item>Uncategorized</item>
...
    <string-array name="latitude_options">
        <item>Middle of the Night</item>
        <item>One Seventh of the Night</item>
        <item>Angle Based (Default)</item>
    </string-array>
    <string-array name="prayer_names">
        <item>Fajr Prayer</item>
        <item>Dhuhr Prayer</item>
        <item>Asr Prayer</item>
        <item>Maghrib Prayer</item>
        <item>Isha Prayer</item>
    </string-array>
    <string-array name="do_not_disturb_minutes">
        <item>0 Minutes</item>
        <item>15 Minutes</item>
        <item>30 Minutes</item>
        <item>45 Minutes</item>
...
