...
            }
        }
    }
}

private fun previewSurahs() = listOf(
    Surah(1, "سورة الفاتحة", "Suratul Fatiha", true, 7, 1, 1),
    Surah(2, "سورة البقرة", "Suratul Baqarah", false, 286, 2, null),
    Surah(3, "سورة آل عمران", "Suratul Aal-Imran", false, 200, 50, 2),
    Surah(4, "سورة النساء", "Suratul Nisa", false, 176, 77, null),
    Surah(5, "سورة المائدة", "Suratul Maidah", false, 120, 106, null),
    Surah(6, "سورة الأنعام", "Suratul An'am", true, 165, 128, null)
)
