<resources>
  <string name="app_name">Sunnah Assistant</string>
  <string name="next_string">Next:</string>
  <string name="done_for_the_day">It\'s Empty Here</string>
  <string name="switch_to_dark_mode">Switch To Dark Mode</string>
  <string name="to_do_name_label">Name</string>
  <string name="to_do_name_hint">Enter The Name of The To-Do</string>
  <string name="edit_to_do">Edit To-Do</string>
  <string name="add_to_do">Add To-Do</string>
  <string name="to_do_category">Category</string>
  <string name="frequency">Repeat</string>
  <string name="pick_time">Pick Time</string>
  <string name="change_time">Change Time</string>
...
  <string name="change_prayer_time_offset_by">Notify (+/- minutes from prayer time)</string>
    <string name="prayer_offset_minute">minute(s)</string>
    <string name="value">Value</string>
    <string name="add_prayer_time">Activate automatic Salah(Prayer) time alerts</string>
    <string name="welcome">Welcome to Sunnah Assistant:</string>
  <string name="tagline">Set To-Dos that will help you become a better Muslim</string>
    <string name="quick_setup">Get Started</string>
  <string name="delete_to_do">To-Do Deleted</string>
    <string name="undo_delete">Undo</string>
  <string name="cannot_delete_prayer_time">Automatic Prayer alerts can only be deleted from Settings</string>
    <string name="time_not_set">Time not Set</string>
    <string name="general_settings">General Settings</string>
  <string name="next_to_do_notification">Display The Next To-Do Notification</string>
...
  <string name="morning_adhkar">Morning Adhkar</string>
  <string name="evening_adhkar">Evening Adhkar</string>
  <string name="tahajjud">Tahajjud</string>
  <string name="reading_the_quran">Reading the Quran</string>
  <string name="reading_suratul_kahf">Reading Suratul Kahf</string>
  <string name="fasting_on_monday_and_thursday">Fasting On Monday And Thursday</string>
  <string name="demo_to_dos">Demo To-Do</string>
  <string name="tomorrow_at">Tomorrow at&#160;</string>
  <string name="today_at">Today at&#160;</string>
  <string name="daily">Daily&#160;</string>
  <string name="monthly_frequency_display">On %s every month</string>
  <string name="one_time_frequency_display">On %s</string>
  <string name="at_time_example_at_9_pm">%s&#160;</string>
...
  <string name="monday_abbreviated">M</string>
  <string name="tuesday_abbreviated">T</string>
  <string name="wednesday_abbreviated">W</string>
  <string name="thursday_abbreviated">T</string>
  <string name="friday_abbreviated">F</string>
  <string name="saturday_abbreviated">S</string>
  <string name="today">Today</string>
  <string name="calendar">Calendar</string>
  <string name="time_label">Time</string>
  <string name="date">Date</string>
  <string name="date_not_set">Date not Set</string>
  <string name="scroll_to_previous_month">Scroll to previous month icon</string>
  <string name="scroll_to_next_month_icon">Scroll to next month icon</string>
  <string name="ok">OK</string>
  <string name="pick_date">Pick Date</string>
  <string name="gregorian_dates">Gregorian Dates</string>
  <string name="mark_as_complete">Mark as Complete</string>
  <string name="notify">Notify</string>
  <string name="tap_to_change">(Tap to Change)</string>
  <string name="repeat_cannot_be_changed">Repeat frequency for automatic prayer time cannot be changed</string>
  <string name="category_cannot_be_changed">Category for automatic prayer time cannot be changed</string>
  <string name="time_cannot_be_changed">Time for automatic prayer time cannot be changed</string>
  <string name="minutes">+/- minutes</string>
...
