<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="settings"
            type="com.thesunnahrevival.common.data.model.AppSettings"
            />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:padding="@dimen/default_dimen"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_or_delete_categories"
            android:textColor="@color/colorAccent"            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categories_list"
            android:layout_width="match_parent"
            android:paddingTop="@dimen/default_dimen"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:backgroundTint="@color/fabColor"
            app:srcCompat="@drawable/ic_add_to_do"
            />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>