...
                mAppSettings = settings
                setTheme()
                populateTheSpinner(settings.savedSpinnerPosition)
                setupTheRecyclerView()
                if (settings.isDisplayHijriDate) {
                    mBinding.hijriDate.text = Html.fromHtml(
                            "<b>Today's Date:</b>  " +
                                    TimeDateUtil.getHijriDate() + " A.H")
                    mBinding.hijriDate.visibility = View.VISIBLE
                }
                else
                    mBinding.hijriDate.visibility = View.GONE

...
